--- a/Symphony_V2/appsettings.json
+++ b/Symphony_V2/appsettings.json
@@ -8,9 +8,9 @@
   },
   "AllowedHosts": "*",
   "MailSettings": {
-    "Mail": "amina.jahic95@gmail.com",
+    "Mail": "amina.questionnaire95@gmail.com",
     "DisplayName": "Amina Jahic",
-    "Password": "Amina1204",
+    "Password": "questionnaire1204",
     "Host": "smtp.gmail.com",
     "Port": 587
   }
