--- a/Symphony_V2/appsettings.Development.json
+++ b/Symphony_V2/appsettings.Development.json
@@ -3,9 +3,9 @@
     "DefaultConnection": "Server=localhost;Initial Catalog=symphony-challenge;Persist Security Info=False;Integrated Security=true;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "MailSettings": {
-    "Mail": "amina.jahic95@gmail.com",
+    "Mail": "amina.questionnaire95@gmail.com",
     "DisplayName": "Amina Jahic",
-    "Password": "Amina1204",
+    "Password": "questionnaire1204",
     "Host": "smtp.gmail.com",
     "Port": 587
   },
